--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,34 @@
 @font-face {
   font-family: Capitana;
-  src: url('./assets/fonts/Capitana\ Regular.ttf');
+  src: url("./assets/fonts/Capitana\ Regular.ttf");
 }
 @font-face {
   font-family: CapitanaBold;
-  src: url('./assets/fonts/Capitana\ Bold.ttf');
+  src: url("./assets/fonts/Capitana\ Bold.ttf");
 }
 
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
-  
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
   border-radius: 2px;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #888;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #555;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   font-family: Capitana;
@@ -39,8 +38,8 @@
   outline: none;
 }
 
-body{
-  background-image: url('./assets/bkg_pix.jpg');
+body {
+  background-image: url("./assets/bkg_pix.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
@@ -54,21 +53,21 @@ body:before {
   width: 100%;
   height: 100%;
   z-index: -10;
-  background: url('./assets/bkg_pix.jpg') no-repeat center center;
+  background: url("./assets/bkg_pix.jpg") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
 
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   display: none;
 }
 
-p{
+p {
   font-size: 15px;
 }
-a{
+a {
   text-decoration: none;
   color: black;
 }
@@ -83,58 +82,57 @@ footer {
   margin-top: 20px; /* adjust this value to change the distance between the content and footer */
 }
 
-
-#footer-container{
+#footer-container {
   margin-bottom: 80px;
 }
 
-#logo-static{
-  width: 100px; 
+#logo-static {
+  width: 100px;
   margin-top: 20px;
 }
 
-#bgvideo{
+#bgvideo {
   min-width: 100%;
   min-height: 100%;
 }
 
-#video-container{
+#video-container {
   position: fixed;
   display: flex;
 }
 
-#logogif{
+#logogif {
   margin: auto;
   width: 25%;
 }
 
-#logo-white{
+#logo-white {
   height: 50px;
   transform: translateY(40%);
 }
 
-.bold{
+.bold {
   font-family: CapitanaBold;
 }
 
-.allcaps{
+.allcaps {
   text-transform: uppercase;
 }
 
-.container{
+.container {
   position: absolute;
   width: 100%;
   height: 100%;
 }
 
-.centered{
+.centered {
   margin: auto;
   width: 100%;
   height: 100%;
   text-align: center;
 }
 
-.scrollbar-center{
+.scrollbar-center {
   margin-top: 100px;
   width: 100%;
   display: flex;
@@ -142,7 +140,7 @@ footer {
   justify-content: center;
 }
 
-.scrollbar-container{
+.scrollbar-container {
   overflow-y: hidden;
   display: inline-flex;
   align-items: center;
@@ -152,7 +150,7 @@ footer {
   border-radius: 10px;
 }
 
-.scrollbar-item{
+.scrollbar-item {
   margin-left: 10px;
   margin-right: 10px;
   min-width: 150px;
@@ -163,26 +161,26 @@ footer {
   align-items: center;
 }
 
-.scrollbar-item-username{
+.scrollbar-item-username {
   font-weight: bold;
   text-transform: uppercase;
   user-select: none;
 }
 
-.scrollbar-item:first-child{
+.scrollbar-item:first-child {
   border-radius: 25px 0 0 25px;
 }
 
-.scrollbar-item:last-child{
+.scrollbar-item:last-child {
   border-radius: 0 25px 25px 0;
 }
 
-.forms-container{
+.forms-container {
   width: 100%;
   height: 300px;
 }
 
-#form-nav ul{
+#form-nav ul {
   user-select: none;
   list-style: none;
   width: 100%;
@@ -193,7 +191,7 @@ footer {
   letter-spacing: 3px;
 }
 
-#form-nav li{
+#form-nav li {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -201,29 +199,30 @@ footer {
   height: 100%;
 }
 
-#form-nav li:hover{
+#form-nav li:hover {
   background-color: #00919d;
-  transition: .1s;
+  transition: 0.1s;
   color: white;
 }
 
-#selected{
+#selected {
   background-color: black;
   color: white;
 }
 
-#form-nav{
+#form-nav {
   margin-top: 20px;
   height: 35px;
   width: 25%;
 }
 
-.login-form-container{
+.login-form-container {
   width: 100%;
   margin-top: 10px;
 }
 
-input[type=text], input[type=password]{
+input[type="text"],
+input[type="password"] {
   width: 25%;
   height: 30px;
   border: none;
@@ -234,12 +233,14 @@ input[type=text], input[type=password]{
   font-weight: 500;
   letter-spacing: 2px;
 }
-input[type=text]::placeholder, input[type=password]::placeholder{
+input[type="text"]::placeholder,
+input[type="password"]::placeholder {
   text-transform: uppercase;
   font-size: 10px;
 }
 
-.login-form input[type=submit], .submit-button{
+.login-form input[type="submit"],
+.submit-button {
   background-color: black;
   color: white;
   border: none;
@@ -249,41 +250,41 @@ input[type=text]::placeholder, input[type=password]::placeholder{
   margin-top: 0;
 }
 
-.login-form input[type=submit]:hover, .submit-button:hover{
+.login-form input[type="submit"]:hover,
+.submit-button:hover {
   background-color: #00919d;
-  transition: .1s;
+  transition: 0.1s;
 }
 
-.submit-button-container{
+.submit-button-container {
   width: 25%;
 }
 
-.input-half{
+.input-half {
   width: 12% !important;
   margin: 0.5%;
   margin-top: none !important;
 }
 
-#response-message{
+#response-message {
   color: black;
   display: block;
-  
 }
 
-.profile-container{
+.profile-container {
   width: 35%;
   transform: translateX(93%);
   text-align: left;
 }
 
-.profile-text p{
+.profile-text p {
   font-size: 12px;
   user-select: none;
   font-weight: 550;
   letter-spacing: 0.6px;
 }
 
-.profile-container hr{
+.profile-container hr {
   margin-top: 20px;
   margin-bottom: 20px;
   height: 2px;
@@ -291,72 +292,71 @@ input[type=text]::placeholder, input[type=password]::placeholder{
   border: none;
 }
 
-#profile-picture{
+#profile-picture {
   height: 100%;
   width: 100%;
 }
-.profile-picture-container:hover{
-  transition: .1s;
-  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.3);  
+.profile-picture-container:hover {
+  transition: 0.1s;
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.3);
 }
-.profile-picture-container{
+.profile-picture-container {
   border-radius: 25px 0px 0px 25px;
   height: 150px;
   width: 150px;
   margin-right: 25px;
   float: left;
 }
-.profile-picture-container input{
+.profile-picture-container input {
   opacity: 0;
 }
 
-
-.about-container p{
+.about-container p {
   font-size: 12px;
   user-select: none;
   font-weight: 550;
   letter-spacing: 0.6px;
 }
 
-.about-container hr{
+.about-container hr {
   margin: 5px;
 }
 
-.projects-container{
+.projects-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
 }
 
-.project.rounded-top-left{
+.project.rounded-top-left {
   border-radius: 25px 0px 0px 0px;
 }
 
-.project.rounded-top-right{
+.project.rounded-top-right {
   border-radius: 0px 25px 0px 0px;
 }
 
-.project.rounded-bottom-left{
+.project.rounded-bottom-left {
   border-radius: 0px 0px 0px 25px;
 }
 
-#create-project{
+#create-project {
   border-color: #00919d;
   background-color: transparent !important;
-  background-image: url('../src/assets/profile/add_project.png');
-  background-size:cover;
+  background-image: url("../src/assets/profile/add_project.png");
+  background-size: cover;
   height: 10.5vw;
 }
 
-#create-project:hover{
+#create-project:hover {
   border-color: #00919d !important;
   background-color: #00919d !important;
-  background-image: url('../src/assets/profile/add_project_hover.png') !important;
+  background-image: url("../src/assets/profile/add_project_hover.png") !important;
   background-size: cover !important;
-  transition: .1s !important;
+  transition: 0.1s !important;
 }
 
-.project{
+.project {
   border: 5px solid black;
   width: 100%;
   height: 10.5vw;
@@ -367,23 +367,23 @@ input[type=text]::placeholder, input[type=password]::placeholder{
   justify-content: center;
   background-color: black;
 }
-.project p{
+.project p {
   font-size: 20px;
   text-align: center;
   font-weight: bold;
   opacity: 0;
 }
-.project:hover p{
+.project:hover p {
   opacity: 1;
-  transition: .2s;
+  transition: 0.2s;
 }
-.project:hover{
+.project:hover {
   background-image: none !important;
   color: white;
-  transition: .1s;
+  transition: 0.1s;
 }
 
-#project-biginput{
+#project-biginput {
   font-size: 28pt;
   font-weight: 500;
   height: 34pt;
@@ -393,11 +393,11 @@ input[type=text]::placeholder, input[type=password]::placeholder{
   border-bottom: 2px solid #7f7f7f;
 }
 
-input::placeholder#biginput{
+input::placeholder#biginput {
   font-size: 30pt;
 }
 
-#about-artwork{
+#about-artwork {
   text-transform: uppercase;
   text-align: right;
   font-weight: bold;
@@ -406,14 +406,12 @@ input::placeholder#biginput{
   letter-spacing: 2px;
 }
 
-
-
-#about-arrow-right{
+#about-arrow-right {
   width: 70%;
-  margin: 5px
+  margin: 5px;
 }
 
-.add-save-container{
+.add-save-container {
   margin-top: 20px;
   margin-bottom: 20px;
   display: inline-flex;
@@ -421,14 +419,14 @@ input::placeholder#biginput{
   justify-content: center;
   width: 100%;
 }
-.add-save-subcontainer{
+.add-save-subcontainer {
   justify-items: center;
   justify-self: center;
   display: flex;
   width: 40vh;
 }
 
-#save-project-button{
+#save-project-button {
   width: 200px;
   height: 50px;
   border: 5px solid black;
@@ -441,30 +439,30 @@ input::placeholder#biginput{
   font-weight: bold;
 }
 
-#save-project-button:hover{
+#save-project-button:hover {
   border: 5px solid #00919d;
   color: #00919d;
   font-weight: bold;
-  transition: .1s;
+  transition: 0.1s;
 }
 
-#add-art-button{
+#add-art-button {
   width: 50px;
   height: 50px;
-  background-image: url('./assets/createProject/addButton.png');
+  background-image: url("./assets/createProject/addButton.png");
   background-size: cover;
   border: 5px solid black;
   margin: auto;
   margin-bottom: 20px;
 }
 
-#add-art-button:hover{
+#add-art-button:hover {
   border: 5px solid #00919d;
-  background-image: url('./assets/createProject/addButtonHover.png');
-  transition: .1s;
+  background-image: url("./assets/createProject/addButtonHover.png");
+  transition: 0.1s;
 }
 
-.create-project-layout{
+.create-project-layout {
   margin-top: 20px;
   display: grid;
   grid-template-columns: 25% 3% 44% 28%;
@@ -473,13 +471,13 @@ input::placeholder#biginput{
   grid-row-gap: 0px;
 }
 
-.create-project-layout hr{
+.create-project-layout hr {
   border: 1.5px solid #7f7f7f;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-.set-artwork-cover{
+.set-artwork-cover {
   position: relative;
   display: flex;
   width: 150px;
@@ -493,14 +491,14 @@ input::placeholder#biginput{
   align-items: center;
 }
 
-.set-artwork-cover input{
+.set-artwork-cover input {
   height: 100%;
   width: 100%;
   margin-top: 0;
   opacity: 0;
 }
 
-.set-artwork-cover p{
+.set-artwork-cover p {
   position: absolute;
   font-weight: bold;
   font-size: 12px;
@@ -509,7 +507,7 @@ input::placeholder#biginput{
   text-align: center;
 }
 
-#imgUpload{
+#imgUpload {
   width: 100%;
   background-color: white;
   height: 30vw;
@@ -526,7 +524,7 @@ input::placeholder#biginput{
   font-weight: bold;
 } */
 
-.upload-file-container{
+.upload-file-container {
   background-color: white;
   height: auto;
   min-height: 350px;
@@ -535,40 +533,40 @@ input::placeholder#biginput{
   align-items: center;
 }
 
-.upload-file-container:hover{
-  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.3);  
-  transition: .1s;
+.upload-file-container:hover {
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.3);
+  transition: 0.1s;
 }
-.upload-file-container img{
+.upload-file-container img {
   width: 100%;
   display: none;
 }
-.upload-file-container input{
+.upload-file-container input {
   position: absolute;
   width: 50%;
   height: 350px;
   opacity: 0;
 }
 
-.upload-file-container p{
+.upload-file-container p {
   font-weight: bold;
   font-size: 12px;
   pointer-events: none;
   user-select: none;
 }
 
-.set-artwork-title-container{
+.set-artwork-title-container {
   display: flex;
   align-items: top;
   justify-content: right;
 }
-.set-artwork-title-container img{
+.set-artwork-title-container img {
   height: 30px;
   width: 30px;
   margin-right: 5px;
 }
 
-textarea{
+textarea {
   border: none;
   background-color: transparent;
   border-bottom: 2px solid #808080;
@@ -581,33 +579,33 @@ textarea{
   resize: none;
 }
 
-textarea::-webkit-scrollbar{
+textarea::-webkit-scrollbar {
   width: 0px;
 }
 
-#upload-p-container{
+#upload-p-container {
   background-color: red;
   position: relative;
   height: 150px;
 }
 
-.edit-hover:hover{
+.edit-hover:hover {
   color: #808080;
-  transition: .2s;
+  transition: 0.2s;
 }
 
-#update-profile{
+#update-profile {
   border: none;
   width: 50%;
   margin: 0;
   padding: 0;
 }
 
-input::placeholder#update-profile{
+input::placeholder#update-profile {
   color: red;
 }
 
-#project-no-image-placeholder{
+#project-no-image-placeholder {
   width: 100%;
   height: 350px;
   background-color: rgba(0, 0, 0, 0.2);
@@ -616,18 +614,18 @@ input::placeholder#update-profile{
   justify-content: center;
 }
 
-#about-artwork-content{
+#about-artwork-content {
   float: right;
   text-align: right;
   width: 80%;
   margin-top: 20px;
 }
 
-#project-back-to-profile{
+#project-back-to-profile {
   float: right;
 }
 
-.back-to-profile-container{
+.back-to-profile-container {
   position: relative;
   bottom: 0;
   height: 12px;
@@ -637,11 +635,11 @@ input::placeholder#update-profile{
   text-transform: uppercase;
 }
 
-.back-to-profile-container img{
+.back-to-profile-container img {
   height: 12px;
 }
 
-.back-to-profile-container p{
+.back-to-profile-container p {
   font-size: 10px;
   letter-spacing: 2px;
   margin-left: 5px;
