--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,196 +1,198 @@
-@media (max-width: 480px){
-    body:before {
-        content: "";
-        display: block;
-        position: fixed;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -10;
-        background: url('../assets/bkg_pix.jpg') no-repeat center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-      }
+@media (max-width: 480px) {
+  body:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url("../assets/bkg_pix.jpg") no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 
-    .forms-container{
-        margin-top: 80px;
-    }
-    #form-nav{
-        display: block;
-        width: 70%;
-    }
+  .forms-container {
+    margin-top: 80px;
+  }
+  #form-nav {
+    display: block;
+    width: 70%;
+  }
 
-    #form-nav li{
-        display: flex;
-        width: 100%;
-    }
+  #form-nav li {
+    display: flex;
+    width: 100%;
+  }
 
-    #form-nav ul{
-        width: 100%;
-    }
+  #form-nav ul {
+    width: 100%;
+  }
 
-    #login-form input[type=submit], .submit-button{
-        width: 30%;
-    }
+  #login-form input[type="submit"],
+  .submit-button {
+    width: 30%;
+  }
 
-    input[type=text], input[type=password]{
-        width: 70%;
-    }
+  input[type="text"],
+  input[type="password"] {
+    width: 70%;
+  }
 
-    .submit-button-container{
-        width: 70%;
-    }
+  .submit-button-container {
+    width: 70%;
+  }
 
-    .input-half{
-        width: 34.5% !important;
-    }
+  .input-half {
+    width: 34.5% !important;
+  }
 
-    .profile-container{
-        width: 70%;
-        transform: translateX(0%);
-        margin: auto;
-    }
+  .profile-container {
+    width: 70%;
+    transform: translateX(0%);
+    margin: auto;
+  }
 
-    .profile-picture-container{
-        background-position: center;
-        margin-right: 0px;
-        width: 70vw;
-        height: 70vw;
-        border-radius: 25px;
-        margin-bottom: 20px;
-    }
+  .profile-picture-container {
+    background-position: center;
+    margin-right: 0px;
+    width: 70vw;
+    height: 70vw;
+    border-radius: 25px;
+    margin-bottom: 20px;
+  }
 
-    .profile-container h1{
-        text-align: center;
-    }
+  .profile-container h1 {
+    text-align: center;
+  }
 
-    .projects-container{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 10px;
-      }
+  .projects-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  }
 
-    .project{
-        border: 2px solid black;
-        min-width: 100%;
-        height: 21vw;
-      }
+  .project {
+    border: 2px solid black;
+    min-width: 100%;
+    height: 21vw;
+  }
 
-      .project p{
-        font-size: 12px;
-      }
+  .project p {
+    font-size: 12px;
+  }
 
-      #create-project{
-        height: 21vw;
-      }
+  #create-project {
+    height: 21vw;
+  }
 
-      /* Preview Project */
+  /* Preview Project */
 
-      .create-project-layout{
-        margin: 0;
-        margin-bottom: 50px;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-auto-rows: auto;
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-      }
-      #container-mobile{
-        margin: 5px;
-      }
-      #container-mobile hr{
-        width: 95%;
-        margin: auto;
-        border: 1.5px solid #7f7f7f;
-        margin-top: 10px;
-        margin-bottom: 10px;
-      }
+  .create-project-layout {
+    margin: 0;
+    margin-bottom: 50px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+  #container-mobile {
+    margin: 5px;
+  }
+  #container-mobile hr {
+    width: 95%;
+    margin: auto;
+    border: 1.5px solid #7f7f7f;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 
-      #container-mobile h1{
-        margin-top: 20px;
-        margin-bottom: 20px;
-      }
+  #container-mobile h1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 
-      #container-mobile textarea{
-        width: 100%;
-        font-size: 13px;
-      }
+  #container-mobile textarea {
+    width: 100%;
+    font-size: 13px;
+  }
 
-      #container-mobile textarea::placeholder{
-        font-size: 13px;
-        letter-spacing: 1px;
-      }
+  #container-mobile textarea::placeholder {
+    font-size: 13px;
+    letter-spacing: 1px;
+  }
 
-      #project-biginput::placeholder{
-        margin-bottom: 50px;
-        width: 80%;
-        font-size: 13px;
-      }
+  #project-biginput::placeholder {
+    margin-bottom: 50px;
+    width: 80%;
+    font-size: 13px;
+  }
 
-      .title-container{
-        margin: 5px;
-        margin-bottom: 20px;
-      }
+  .title-container {
+    margin: 5px;
+    margin-bottom: 20px;
+  }
 
-      #arrow-down{
-        width: 30px;
-        float: left;
-      }
+  #arrow-down {
+    width: 30px;
+    float: left;
+  }
 
-      #arrow-up{
-        width: 30px;
-        float: left;
-      }
+  #arrow-up {
+    width: 30px;
+    float: left;
+  }
 
-      #about-artwork-content{
-        letter-spacing: 2px;
-        margin: 5px;
-        text-align: left;
-        text-transform: uppercase;
-        font-weight: bold;
-        font-size: 12px;
-      }
+  #about-artwork-content {
+    letter-spacing: 2px;
+    margin: 5px;
+    text-align: left;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 12px;
+  }
 
-      .about-artwork-container{
-        margin: 5px;
-        display: flex;
-        align-items: center;
-      }
+  .about-artwork-container {
+    margin: 5px;
+    display: flex;
+    align-items: center;
+  }
 
-      .art-container hr{
-        width: 95%;
-        margin: auto;
-        border: 1.5px solid #7f7f7f;
-        margin-top: 10px;
-        margin-bottom: 10px;
-      }
+  .art-container hr {
+    width: 95%;
+    margin: auto;
+    border: 1.5px solid #7f7f7f;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 
-      .art-container h1{
-        margin-bottom: 20px;
-      }
+  .art-container h1 {
+    margin-bottom: 20px;
+  }
 
-      #description-content{
-        margin-left: 5px;
-        margin-bottom: 20px;
-        letter-spacing: 1px;
-        line-height: 1.5;
-      }
+  #description-content {
+    margin-left: 5px;
+    margin-bottom: 20px;
+    letter-spacing: 1px;
+    line-height: 1.5;
+  }
 
-      .set-artwork-cover{
-        float: initial;
-        border-radius: 20px 20px 20px 20px;
-        width: 60vw;
-        height: 60vw;
-        margin: auto;
-        margin-top: 30px;
-        margin-bottom: 30px;
-      }
-      .set-artwork-cover p{
-        font-size: 20px;
-        position: absolute;
-        width: 60vw;
-      }
+  .set-artwork-cover {
+    float: initial;
+    border-radius: 20px 20px 20px 20px;
+    width: 60vw;
+    height: 60vw;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+  .set-artwork-cover p {
+    font-size: 20px;
+    position: absolute;
+    width: 60vw;
+  }
 }
