--- a/src/css/tablet.css
+++ b/src/css/tablet.css
@@ -1,121 +1,120 @@
 @media (min-width: 481px) and (max-width: 768px) {
-    body:before {
-        content: "";
-        display: block;
-        position: fixed;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -10;
-        background: url('../assets/bkg_pix.jpg') no-repeat center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-      }
-    .forms-container {
-        margin-top: 0px;
-    }
+  body:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url("../assets/bkg_pix.jpg") no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  .forms-container {
+    margin-top: 0px;
+  }
 
-    #form-nav {
-        width: 70%;
-    }
+  #form-nav {
+    width: 70%;
+  }
 
-    #form-nav li {
-        display: inline-flex;
-        width: 100%;
-    }
+  #form-nav li {
+    display: inline-flex;
+    width: 100%;
+  }
 
-    #form-nav ul {
-        width: 100%;
-        display: inline-flex
-    }
+  #form-nav ul {
+    width: 100%;
+    display: inline-flex;
+  }
 
-    #login-form input[type=submit],
-    .submit-button {
-        width: 30%;
-    }
+  #login-form input[type="submit"],
+  .submit-button {
+    width: 30%;
+  }
 
-    input[type=text],
-    input[type=password] {
-        width: 70%;
-    }
+  input[type="text"],
+  input[type="password"] {
+    width: 70%;
+  }
 
-    .submit-button-container {
-        width: 70%;
-    }
+  .submit-button-container {
+    width: 70%;
+  }
 
-    .input-half {
-        width: 34.5% !important;
-    }
+  .input-half {
+    width: 34.5% !important;
+  }
 
+  .profile-container {
+    width: 70%;
+    transform: translateX(0%);
+    margin: auto;
+  }
 
-    .profile-container {
-        width: 70%;
-        transform: translateX(0%);
-        margin: auto;
-    }
+  .profile-picture-container {
+    background-position: center;
+    margin-right: 20px;
+    width: 29vw;
+    height: 29vw;
+    margin-bottom: 20px;
+  }
 
-    .profile-picture-container {
-        background-position: center;
-        margin-right: 20px;
-        width: 29vw;
-        height: 29vw;
-        margin-bottom: 20px;
-    }
+  .profile-container h1 {
+    text-align: center;
+  }
 
-    .profile-container h1 {
-        text-align: center;
-    }
+  .projects-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
 
-    .projects-container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 20px;
-    }
+  .project {
+    border: 5px solid black;
+    width: 100%;
+    height: 21vw;
+  }
 
-    .project {
-        border: 5px solid black;
-        width: 100%;
-        height: 21vw;
-    }
+  .project p {
+    font-size: 12px;
+  }
 
-    .project p {
-        font-size: 12px;
-    }
+  #create-project {
+    height: 21vw;
+  }
 
-    #create-project {
-        height: 21vw;
-    }
+  /* Preview Project */
 
-    /* Preview Project */
+  .create-project-layout {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 22% 6% 72%;
+    grid-auto-rows: auto;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
 
-    .create-project-layout{
-        margin-top: 20px;
-        display: grid;
-        grid-template-columns: 22% 6% 72%;
-        grid-auto-rows: auto;
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-    }
+  #about-artwork {
+    font-size: 11px;
+  }
 
-    #about-artwork{
-        font-size: 11px;
-    }
+  #about-artwork-content {
+    float: right;
+    text-align: right;
+    width: 100%;
+    overflow: auto;
+    margin-top: 20px;
+  }
 
-    #about-artwork-content{
-        float: right;
-        text-align: right;
-        width: 100%;
-        overflow: auto;
-        margin-top: 20px;
-      }
-
-    .about-artwork-container{
-        position: absolute;
-        height: 90%;
-        overflow: auto;
-        bottom: 0;
-    }
+  .about-artwork-container {
+    position: absolute;
+    height: 90%;
+    overflow: auto;
+    bottom: 0;
+  }
 }
